--- a/medicare/package.json
+++ b/medicare/package.json
@@ -14,9 +14,12 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.15",
     "axios": "^1.3.4",
+    "firebase": "^9.19.1",
     "framer-motion": "^10.10.0",
+    "mapbox-gl": "^2.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^7.0.21",
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
